0.0.13  (... 2005)
- Added server field to login dialog
- Added item descriptions to inventory and buy/sell dialogs
- Added confirmation dialog before quitting
- Added button to show/hide equipment window
- Fixed a crash in OpenGL mode

0.0.12  (1 May 2005)
- Added new map (a cave), tiles, monsters and items
- Added volume sliders in setup window
- Added attack and level up samples
- Added icon to application window
- Added player names below players
- Added register button in login screen
- Added warning message to use at least 4 characters as user name
- Added scrollbar and command history to chat window
- Added proper support for installation of the game on *nix systems
- Improved skin on scrollbars, arrows and slider
- Improved sound engine and added fade in and out option for music
- Now you can use right mouse button to attack (enables also ranged attacks)
- Sound samples are now loaded through resource manager
- Item information is now stored in an XML file
- Monstersets are now loaded dynamically
- Fixed crash when map server is down
- Fixed NPC lists not to show garbage
- Fixed attack animation to be synced with attack speed
- Fixed speech and emoticons position
- Fixed speech, damage and emoticon display to be framerate independent
- Fixed rendering of certain monsters, items and NPCs in OpenGL mode
- Fixed skipping with mouse walk and made interruptable with keyboard
- Fixed mouse walk when dead or talking with NPC
- Fixed log files to be created in ~/.tmw on Linux systems

0.0.11.2  (8 April 2005)
- Damage text now floats upwards
- Mouse walk now only works with left mouse button
- Fixed frequent crash on startup and exit that crept into 0.0.11.1

0.0.11.1  (7 April 2005)
- Buttons are now disabled when appropriate
- Fixed players standing on top of NPCs
- Fixed getting stuck when trying to sell with nothing to sell
- Fixed setup dialog windowed/fullscreen switching behaviour
- Fixed gui opacity slider (win32)