@@ -4,6 +4,7 @@
 - Added confirmation dialog before quitting
 - Added button to show/hide equipment window
 - Fixed a crash in OpenGL mode
+- Fixed rendering of minimap, progress bars and player sprite in OpenGL mode
 
 0.0.12  (1 May 2005)
 - Added new map (a cave), tiles, monsters and items
